--- a/PakMart.Web/Areas/Admin/Views/ReturnRequest/List.cshtml
+++ b/PakMart.Web/Areas/Admin/Views/ReturnRequest/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
 
-    ViewData["Title"] = "Orders";
+    ViewData["Title"] = "Return Requests";
 }
 
 
@@ -69,12 +69,7 @@
 <div>
     <!-- Header and Info Text -->
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-2 gap-2">
-        <h4 class="mb-0">Orders</h4>
-        <div class="deletebtns d-flex flex-wrap gap-2">
-            <button class="btn btn-sm btn-success" onclick="approvedSelected()">
-                <i class="fa fa-check-circle"></i> Print PDF Invoices
-            </button>
-        </div>
+        <h4 class="mb-0">Return Requests</h4>
     </div>
 
 
@@ -109,56 +104,35 @@
                                     <input type="date" class="form-control" id="endDate" name="EndDate">
                                 </div>
                             </div>
-                            <div class="row mb-3 align-items-center">
-                                <label for="orderStatus" class="col-sm-3 col-form-label">Order Status</label>
-                                <div class="col-sm-9">
-                                    <select class="form-select" id="orderStatus" name="OrderStatus">
-                                        <option value="all">All</option>
-                                        <option value="complete">Complete</option>
-                                        <option value="processing">Processing</option>
-                                        <option value="pending">Pending</option>
-                                        <option value="pending">Cancelled</option>
-                                    </select>
-                                </div>
-                            </div>
+                            
                         </div>
 
                         <!-- Right Column -->
                         <div class="col-md-6 mb-3">
                             <div class="row mb-3 align-items-center">
-                                <label for="paymentStatus" class="col-sm-3 col-form-label">Payment Status</label>
+                                <label for="id" class="col-sm-3 col-form-label">ID</label>
                                 <div class="col-sm-9">
-                                    <select class="form-select" id="paymentStatus" name="PaymentStatus">
-                                        <option value="all">All</option>
-                                        <option value="paid">Paid</option>
-                                        <option value="pending">Pending</option>
-                                    </select>
+                                    <input type="text" class="form-control" id="id" name="ID">
                                 </div>
                             </div>
                             <div class="row mb-3 align-items-center">
-                                <label for="shippingStatus" class="col-sm-3 col-form-label">
-                                    Shipping Status
+                                <label for="returnStatus" class="col-sm-3 col-form-label">
+                                    Return Status
                                 </label>
                                 <div class="col-sm-9">
-                                    <select class="form-select" id="shippingStatus" name="ShippingStatus">
+                                    <select class="form-select" id="returnStatus" name="returnStatus">
                                         <option value="all">All</option>
-                                        <option value="paid">Delivered</option>
-                                        <option value="pending">Shipped</option>
-                                        <option value="pending">Not yet shipped</option>
+                                        <option value="paid">Pending</option>
+                                        <option value="pending">Received</option>
+                                        <option value="pending">Return authorized</option>
+                                        <option value="pending">Item(s) repaired</option>
+                                        <option value="pending">Item(s) refunded</option>
+                                        <option value="pending">Request rejected</option>
+                                        <option value="pending">Cancelled</option>
                                     </select>
                                 </div>
                             </div>
-                            <div class="row mb-3 align-items-center">
-                                <label for="go" class="col-sm-3 col-form-label">
-                                    Go directly to order #
-                                </label>
-                                <div class="col-sm-9">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" id="go" name="Go">
-                                        <button class="btn btn-primary" type="button">Go</button>
-                                    </div>
-                                </div>
-                            </div>
+                            
 
                         </div>
                     </div>
@@ -182,73 +156,83 @@
                    style="width: auto; min-width: 100%; border-collapse: collapse; white-space: normal; font-size: 13px;">
                 <thead>
                     <tr style="color: black;">
-                        <td style="text-align: center; padding: 3px;">
-                            <input type="checkbox" class="select-all select-item" onclick="selectAllLogs(this)">
-                        </td>
-                        <th>Order #</th>
-                        <th>Order status</th>
-                        <th>Payment status</th>
-                        <th>Shipping status</th>
+                        <th>ID</th>
+                        <th>Product</th>
+                        <th>Quantity</th>
+                        <th>Quantity returned to stock</th>
                         <th>Customer</th>
-                        <th>Created on</th>
-                        <th>Order total</th>
-                        <th>View</th>
+                        <th>Order #</th>
+                        <th>Return request status</th>
+                        <th>Date</th>
+                        <th>Edit</th>
                     </tr>
                 </thead>
                 <tbody id="logTableBody">
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
-                   
                         <td>1</td>
-                        <td style="color: green;">Completed</td>
-                        <td>Paid</td>
-                        <td>Shipped</td>
-                        <td>John Doe</td>
-                        <td>2025-04-30</td>
-                        <td>$250.00</td>
-                    
+                        <td><a asp-controller="Product" asp-action="Edit">Product 1</a></td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td><a href="#">Customer A</a></td>
+                        <td>
+                            <a asp-controller="Order" asp-action="Edit" class="btn btn-sm btn-light shadow-sm d-inline-flex align-items-center justify-content-center px-3 py-1 rounded"
+                                    style="font-size: 12px;">
+                                <i class="fas fa-eye me-1"></i> 1 - View
+                            </a>
+                        </td>
+                        <td>Pending</td>
+                        <td>2025-05-04</td>
+
                         <td class="text-center p-1 pt-2">
-                            <a asp-action="Edit" asp-controller="Order"
+                            <a asp-action="Edit" asp-controller="ReturnRequest"
                                class="btn btn-light shadow-sm d-inline-flex align-items-center justify-content-center px-3 py-1 rounded"
                                style="font-size: 12px;">
-                                <i class="fas fa-eye me-1"></i> View
+                                <i class="fas fa-edit me-1"></i> Edit
                             </a>
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
-                    
                         <td>2</td>
-                        <td style="color: orange;">Processing</td>
-                        <td>Pending</td>
-                        <td>Not shipped</td>
-                        <td>Jane Smith</td>
-                        <td>2025-04-29</td>
-                        <td>$150.00</td>
-                    
+                        <td><a href="#">Product 2</a></td>
+                        <td>3</td>
+                        <td>1</td>
+                        <td><a href="#">Customer B</a></td>
+                        <td>
+                            <button class="btn btn-sm btn-light shadow-sm d-inline-flex align-items-center justify-content-center px-3 py-1 rounded"
+                                    style="font-size: 12px;">
+                                <i class="fas fa-eye me-1"></i> 3 - View
+                            </button>
+                        </td>
+                        <td>Approved</td>
+                        <td>2025-05-03</td>
+
                         <td class="text-center p-1 pt-2">
                             <button class="btn btn-sm btn-light shadow-sm d-inline-flex align-items-center justify-content-center px-3 py-1 rounded"
                                     style="font-size: 12px;">
-                                <i class="fas fa-eye me-1"></i> View
+                                <i class="fas fa-edit me-1"></i> Edit
                             </button>
                         </td>
 
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
-                    
                         <td>3</td>
-                        <td style="color: red;">Cancelled</td>
-                        <td>Refunded</td>
-                        <td>Not shipped</td>
-                        <td>Michael Brown</td>
-                        <td>2025-04-28</td>
-                        <td>$100.00</td>
-                   
+                        <td><a href="#">Product 3</a></td>
+                        <td>2</td>
+                        <td>0</td>
+                        <td><a href="#">Customer C</a></td>
+                        <td>
+                            <button class="btn btn-sm btn-light shadow-sm d-inline-flex align-items-center justify-content-center px-3 py-1 rounded"
+                                    style="font-size: 12px;">
+                                <i class="fas fa-eye me-1"></i> 5 - View
+                            </button>
+                        </td>
+                        <td>Rejected</td>
+                        <td>2025-05-02</td>
+
                         <td class="text-center p-1 pt-2">
                             <button class="btn btn-sm btn-light shadow-sm d-inline-flex align-items-center justify-content-center px-3 py-1 rounded"
                                     style="font-size: 12px;">
-                                <i class="fas fa-eye me-1"></i> View
+                                <i class="fas fa-edit me-1"></i> Edit
                             </button>
                         </td>
 
@@ -351,155 +335,5 @@
             toggleIcon.classList.add('fa-caret-up');
         }
     });
-
-
-    // Placeholder for search function
-    function searchLogs() {
-        const createdFrom = document.getElementById("createdFrom").value;
-        const createdTo = document.getElementById("createdTo").value;
-        const message = document.getElementById("message").value;
-        const logLevel = document.getElementById("logLevel").value;
-        const userName = document.getElementById("byuser").value;
-
-        $.ajax({
-            url: '@Url.Action("List", "Log")',
-            type: 'GET',
-            data: { createdFrom, createdTo, message, logLevel, userName },
-            success: function (response) {
-                // Update the log table with the response from the partial view
-                $("#logTableContainer").html(response);
-            },
-            error: function (jqXHR, textStatus, errorThrown) {
-                alert("Error fetching logs.");
-                console.log("AJAX error:", textStatus, errorThrown);
-                console.log("Response:", jqXHR.responseText);
-            }
-        });
-    }
-
-    // delete seleted log
-
-    // Initialize an empty array to store selected IDs
-    let idList = [];
-
-    // Function to handle individual checkbox changes
-    function updateIdList(checkbox) {
-        const id = checkbox.value;
-
-        if (checkbox.checked) {
-            // Add ID if it's checked and not already in the list
-            if (!idList.includes(id)) {
-                idList.push(id);
-            }
-        } else {
-            // Remove ID if it's unchecked
-            const index = idList.indexOf(id);
-            if (index > -1) {
-                idList.splice(index, 1);
-            }
-        }
-        console.log('Current ID List:', idList);
-    }
-
-    // Function to handle "Select All" checkbox
-    function selectAllLogs(source) {
-        const checkboxes = document.querySelectorAll("#logTableBody input[type='checkbox']");
-        idList = []; // Clear idList to start fresh
-
-        checkboxes.forEach(checkbox => {
-            checkbox.checked = source.checked; // Set all checkboxes based on "Select All" status
-
-            if (source.checked) {
-                // Add the ID if "Select All" is checked
-                idList.push(checkbox.value);
-            }
-        });
-
-        // Log the updated idList
-        console.log('Current ID List:', idList);
-    }
-
-    // Attach event listeners to each individual checkbox
-    document.querySelectorAll('.select-log').forEach(checkbox => {
-        checkbox.addEventListener('change', function () {
-            updateIdList(this);
-        });
-    });
-
-    // Function to delete selected logs
-    function deleteSelectedLogs() {
-        if (idList.length === 0) {
-            alert("Select the log first.");
-            return;
-        }
-
-        // Confirm with the user
-        const confirmation = confirm("Are you sure you want to delete the selected logs?");
-        if (!confirmation) return;
-
-        // Send the idList to the server
-        fetch('/Log/DeleteSelectedLog', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ ids: idList })
-        })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    // alert("Selected logs have been deleted.");
-
-                    // Remove the selected rows from the table
-                    idList.forEach(id => {
-                        const row = document.querySelector(`tr[data-id="${id}"]`);
-                        if (row) {
-                            row.remove();
-                        }
-                    });
-
-                    // Clear the idList after deletion
-                    idList = [];
-
-                    location.reload();
-                } else {
-                    alert("An error occurred while deleting logs.");
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert("An error occurred while deleting logs.");
-            });
-    }
-
-    // Function to delete selected logs
-    function clearLogs() {
-
-        // Confirm with the user
-        const confirmation = confirm("Are you sure you want to remove all the logs?");
-        if (!confirmation) return;
-
-        // Send the idList to the server
-        fetch('/Log/ClearLogs', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-
-        })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    alert("Cleared All The Logs.");
-                    location.reload(); // Reload the page or update the UI as needed
-                } else {
-                    alert("An error occurred while Clearing logs.");
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert("An error occurred while Clearing logs.");
-            });
-    }
 
 </script>
