Customer and Customer Role

--- a/PakMart.Web/Areas/Admin/Views/Manufacturer/List.cshtml
+++ b/PakMart.Web/Areas/Admin/Views/Manufacturer/List.cshtml
@@ -3,8 +3,6 @@
     ViewData["Title"] = "Manufacturer";
 }
 
-
-
 <style>
     .toggle-btn {
         border: none; /* Removes the border */
@@ -121,7 +119,7 @@
             <table class=" table table-bordered table-striped mt-2" style="width: auto; min-width: 100%; border-collapse: collapse; white-space: nowrap; font-size: 13px;">
                 <thead>
                     <tr style="color: black;">
-                        <td style="text-align: center; padding: 3px;">
+                        <td class="text-center align-middle p-1">
                             <input type="checkbox" class="select-all select-item" onclick="selectAllLogs(this)">
                         </td>
                         <th>Name</th>
@@ -132,7 +130,7 @@
                 </thead>
                 <tbody id="logTableBody">
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td>Apple</td>
                         <td>Yes</td>
                         <td>1</td>
@@ -143,7 +141,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td>HP</td>
                         <td>No</td>
                         <td>2</td>
@@ -154,7 +152,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td>Nike</td>
                         <td>Yes</td>
                         <td>3</td>
