--- a/PakMart.Web/Areas/Admin/Views/Order/ShipmentList.cshtml
+++ b/PakMart.Web/Areas/Admin/Views/Order/ShipmentList.cshtml
@@ -182,7 +182,7 @@
                 </thead>
                 <tbody id="logTableBody">
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
 
                         <td>001</td>
                         <td>ORD-001</td>
@@ -200,7 +200,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
 
                         <td>002</td>
                         <td>ORD-002</td>
@@ -218,7 +218,7 @@
 
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
 
                         <td>003</td>
                         <td>ORD-003</td>
