--- a/PakMart.Web/Areas/Admin/Views/ProductReview/List.cshtml
+++ b/PakMart.Web/Areas/Admin/Views/ProductReview/List.cshtml
@@ -175,7 +175,7 @@
                 </thead>
                 <tbody id="logTableBody">
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td><a href="#" class="link">Product A</a></td>
                         <td><a href="#" class="link">Customer X</a></td>
                         <td>Review Title 1</td>
@@ -193,7 +193,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td><a href="#" class="link">Product B</a></td>
                         <td><a href="#" class="link">Customer Y</a></td>
                         <td>Review Title 2</td>
@@ -210,7 +210,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td><a href="#" class="link">Product C</a></td>
                         <td><a href="#" class="link">Customer Z</a></td>
                         <td>Review Title 3</td>
