--- a/PakMart.Web/Areas/Admin/Views/Category/List.cshtml
+++ b/PakMart.Web/Areas/Admin/Views/Category/List.cshtml
@@ -121,7 +121,7 @@
             <table class=" table table-bordered table-striped mt-2" style="width: auto; min-width: 100%; border-collapse: collapse; white-space: nowrap; font-size: 13px;">
                 <thead>
                     <tr style="color: black;">
-                        <td style="text-align: center; padding: 3px;">
+                        <td class="text-center align-middle p-1">
                             <input type="checkbox" class="select-all select-item" onclick="selectAllLogs(this)">
                         </td>
                         <th>Name</th>
@@ -132,7 +132,7 @@
                 </thead>
                 <tbody id="logTableBody">
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td>Computers</td>
                         <td>Yes</td>
                         <td>1</td>
@@ -143,7 +143,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td>Electronics</td>
                         <td>No</td>
                         <td>2</td>
@@ -154,7 +154,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td>Apparel</td>
                         <td>Yes</td>
                         <td>3</td>
