--- a/PakMart.Web/Areas/Admin/Views/Product/List.cshtml
+++ b/PakMart.Web/Areas/Admin/Views/Product/List.cshtml
@@ -151,7 +151,7 @@
             <table class=" table table-bordered table-striped mt-2" style="width: auto; min-width: 100%; border-collapse: collapse; white-space: nowrap;font-size: 13px;">
                 <thead>
                     <tr style="color: black;">
-                        <td style="text-align: center; padding: 3px;">
+                        <td class="text-center align-middle p-1">
                             <input type="checkbox" class="select-all select-item" onclick="selectAllLogs(this)">
                         </td>
                         <th>Picture</th>
@@ -165,7 +165,7 @@
                 </thead>
                 <tbody id="logTableBody">
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td style="text-align: center; padding: 3px;"><img src="~/images/pic1.jpeg" alt="Product 1" width="70" height="50"></td>
                         <td>Product 1</td>
                         <td>SKU001</td>
@@ -179,7 +179,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td style="text-align: center;"><img src="~/images/pic2.jpeg" alt="Product 2" width="70" height="50"></td>
                         <td>Product 2</td>
                         <td>SKU002</td>
@@ -193,7 +193,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td style="text-align: center; padding: 3px;"><img src="~/images/pic3.jpeg" alt="Product 3" width="70" height="50"></td>
                         <td>Product 3</td>
                         <td>SKU003</td>
@@ -207,7 +207,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td style="text-align: center; padding: 3px;"><img src="~/images/pic4.jpeg" alt="Product 4" width="70" height="50"></td>
                         <td>Product 4</td>
                         <td>SKU004</td>
@@ -221,7 +221,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; padding: 3px;"><input type="checkbox" class="select-item"></td>
+                        <td class="text-center align-middle p-1"><input type="checkbox" class="select-item"></td>
                         <td style="text-align: center; padding: 3px;"><img src="~/images/pic5.jpeg" alt="Product 5" width="70" height="50"></td>
                         <td>Product 5</td>
                         <td>SKU005</td>
